--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "globals": "^15.9.0",
     "typescript": "^5.5.4"
   },
-  "type": "module"
+  "type": "module",
+  "license": "Apache-2.0"
 }
